reorderd projects, fix text wrapping

--- a/components/PortfolioItem.module.scss
+++ b/components/PortfolioItem.module.scss
@@ -17,6 +17,7 @@
 .projectTitle {
   margin: 0 0 1.3rem;
   font-size: 2.3rem;
+  text-wrap: balance;
 
   @media (min-width: $media-min-small) {
     margin: 0 0 2.3rem;
